Add desktop style

--- a/index.html
+++ b/index.html
@@ -38,10 +38,12 @@
 
   <footer>
     <ul class="socials">
-      <li><a href="#">facebok</a></li>
-      <li><a href="#">twitter</a></li>
-      <li><a href="#">instagram</a></li>
+      <li><a href="#"><i class="fab fa-facebook-f"></i></a></li>
+      <li><a href="#"><i class="fab fa-twitter"></i></a></li>
+      <li><a href="#"><i class="fab fa-instagram"></i></a></li>
     </ul>
   </footer>
+
+  <script src="https://kit.fontawesome.com/af6443c7b5.js" crossorigin="anonymous"></script>
 </body>
 </html>
