Add aria-label & change fontawesome script for cdn

--- a/index.html
+++ b/index.html
@@ -8,7 +8,8 @@
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600&display=swap" rel="stylesheet"> 
-  <link href="https://fonts.googleapis.com/css2?family=Open+Sans&display=swap" rel="stylesheet"> 
+  <link href="https://fonts.googleapis.com/css2?family=Open+Sans&display=swap" rel="stylesheet">
+  <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.15.4/css/all.css" integrity="sha384-DyZ88mC6Up2uqS4h/KRgHuoeGwBcD4Ng9SiP4dIRy0EXTlnuz47vAwmeGwVChigm" crossorigin="anonymous">
   <link rel="stylesheet" href="style.css">
 
   <title>Frontend Mentor | Huddle landing page with single introductory section</title>
@@ -38,12 +39,10 @@
 
   <footer>
     <ul class="socials">
-      <li><a href="#"><i class="fab fa-facebook-f"></i></a></li>
-      <li><a href="#"><i class="fab fa-twitter"></i></a></li>
-      <li><a href="#"><i class="fab fa-instagram"></i></a></li>
+      <li><a href="#"><i class="fab fa-facebook-f" aria-label="Facebook link"></i></a></li>
+      <li><a href="#"><i class="fab fa-twitter" aria-label="Twitter link"></i></a></li>
+      <li><a href="#"><i class="fab fa-instagram" aria-label="Instagram link"></i></a></li>
     </ul>
   </footer>
-
-  <script src="https://kit.fontawesome.com/af6443c7b5.js" crossorigin="anonymous"></script>
 </body>
 </html>
