add aria-hidden false

--- a/index.html
+++ b/index.html
@@ -39,9 +39,9 @@
 
   <footer>
     <ul class="socials">
-      <li><a href="#"><i class="fab fa-facebook-f" aria-label="Facebook link"></i></a></li>
-      <li><a href="#"><i class="fab fa-twitter" aria-label="Twitter link"></i></a></li>
-      <li><a href="#"><i class="fab fa-instagram" aria-label="Instagram link"></i></a></li>
+      <li><a href="#"><i class="fab fa-facebook-f" aria-hidden="false" aria-label="Facebook link"></i></a></li>
+      <li><a href="#"><i class="fab fa-twitter" aria-hidden="false" aria-label="Twitter link"></i></a></li>
+      <li><a href="#"><i class="fab fa-instagram" aria-hidden="false" aria-label="Instagram link"></i></a></li>
     </ul>
   </footer>
 </body>
